--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,74 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #1d5d9b;
+}
+
+.title-div {
+  background-color: #f4d160;
+  padding: 2rem;
+  margin-bottom: 3rem;
+}
+
+h1 {
+  font-size: 2.75rem;
+}
+
+h1,
+#subtitle {
+  text-align: center;
+}
+
+#subtitle {
+  font-style: italic;
+  font-size: 1.25rem;
+}
+
+#img-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #image {
   max-width: 100%;
   height: auto;
   max-height: 500px;
-  margin: 0 auto;
   display: block;
+  border-radius: 8px;
+}
+
+#img-caption {
+  margin-bottom: 3rem;
+  font-size: 1.1rem;
+  color: #f4d160;
+}
+
+ul {
+  max-width: 60%;
+  margin: 0 auto;
+  background-color: #f4d160;
+  padding: 2rem;
+  font-size: 1.5rem;
+  border-radius: 8px;
+  margin-bottom: 3rem;
+}
+
+.margin-bottom {
+  margin-bottom: 1.5rem;
+}
+
+#more-info {
+  font-size: 1.5rem;
+  background-color: #f4d160;
+  padding: 1.5rem;
+  text-align: center;
+}
+
+a {
+  color: #1d5d9b;
 }
